--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.2",
     "classnames": "^2.5.1",
     "core-js": "^3.38.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
