--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node --no-deprecation node_modules/jest/bin/jest.js",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@babel/runtime": "^7.25.6",
@@ -15,6 +17,7 @@
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.2",
     "classnames": "^2.5.1",
     "core-js": "^3.38.1",
+    "jest-fetch-mock": "^3.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
@@ -24,18 +27,34 @@
     "react-router-dom": "^7.1.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.9.0",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-jest": "^29.7.0",
+    "cypress": "^14.2.0",
     "eslint": "^9.9.0",
+    "eslint-plugin-cypress": "^4.2.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "fetch-mock": "^12.5.2",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "redux-mock-store": "^1.5.5",
+    "ts-node": "^10.9.2",
     "vite": "^5.4.1"
   }
 }
